--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@
 }
 @media screen and (max-width: 767px) {
   .text-20-bold {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 *,
@@ -152,9 +152,10 @@ p {
   position: absolute;
   width: 100%;
   background-color: transparent;
-  z-index: 1;
+  z-index: 4;
 }
 .header__wrapper {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -163,6 +164,22 @@ p {
           justify-content: space-between;
   max-width: 1280px;
   padding: 67px 104px 10px 128px;
+}
+.header__sandwich {
+  position: absolute;
+  top: 55px;
+  right: 5%;
+  display: none;
+  width: 50px;
+  height: 5px;
+  background-color: #00807C;
+  -webkit-box-shadow: 0px -10px 0px 0px #00807C, 0px 10px 0px 0px #00807C;
+          box-shadow: 0px -10px 0px 0px #00807C, 0px 10px 0px 0px #00807C;
+}
+.header__sandwich--white {
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px -10px 0px 0px #ffffff, 0px 10px 0px 0px #ffffff;
+          box-shadow: 0px -10px 0px 0px #ffffff, 0px 10px 0px 0px #ffffff;
 }
 .header__logo {
   display: -webkit-box;
@@ -205,16 +222,29 @@ p {
 }
 @media screen and (max-width: 767px) {
   .header__wrapper {
-    padding: 10px 2% 0 2%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 35px 5% 0 5%;
+  }
+  .header__sandwich {
+    display: block;
   }
   .header__call {
-    font-size: 13px;
+    font-size: 12px;
+    color: #ffffff;
   }
   .header__phone-text {
-    font-size: 13px;
+    font-size: 12px;
   }
   .header__img {
     width: 140px;
+  }
+  .header__logo-text {
+    margin-top: -16px;
+    font-size: 8px;
+    color: #ffffff;
   }
 }
 .main {
@@ -774,22 +804,21 @@ p {
 }
 @media screen and (max-width: 767px) {
   .consult {
-    min-height: 415px;
+    min-height: 0;
   }
   .consult__page-nav {
-    margin-left: 0;
-    margin-right: 0;
+    display: none;
   }
   .consult__wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    min-height: 416px;
+    min-height: 212px;
   }
   .consult__content {
     padding-left: 5%;
-    background-size: 79%;
+    background-size: auto 100%;
     min-height: 203px;
     width: auto;
     border-radius: 0;
@@ -861,12 +890,7 @@ p {
 }
 @media screen and (max-width: 767px) {
   .page-nav {
-    width: 100%;
-    height: 213px;
-    padding-left: 180px;
-    padding-right: 10px;
-    padding-top: 10px;
-    border-radius: 190px 0 0 0;
+    display: none;
   }
   .page-nav__item:not(:last-child) {
     margin-bottom: 10px;
@@ -1275,56 +1299,47 @@ p {
   margin-right: auto;
 }
 .icon-benefit1 {
-  background-image: url("../img/sprite.png");
-  background-position: 0px 0px;
+  background-image: url("../img/benefit1.png");
   width: 77px;
   height: 54px;
 }
 .icon-benefit2 {
-  background-image: url("../img/sprite.png");
-  background-position: -147px 0px;
+  background-image: url("../img/benefit2.png");
   width: 54px;
   height: 69px;
 }
 .icon-benefit3 {
-  background-image: url("../img/sprite.png");
-  background-position: 0px -118px;
+  background-image: url("../img/benefit3.png");
   width: 70px;
   height: 53px;
 }
 .icon-benefit4 {
-  background-image: url("../img/sprite.png");
-  background-position: 0px -54px;
+  background-image: url("../img/benefit4.png");
   width: 63px;
   height: 64px;
 }
 .icon-benefit5 {
-  background-image: url("../img/sprite.png");
-  background-position: -201px -69px;
+  background-image: url("../img/benefit5.png");
   width: 48px;
   height: 70px;
 }
 .icon-benefit6 {
-  background-image: url("../img/sprite.png");
-  background-position: 0px -171px;
+  background-image: url("../img/benefit6.png");
   width: 57px;
   height: 55px;
 }
 .icon-benefit7 {
-  background-image: url("../img/sprite.png");
-  background-position: -77px -56px;
+  background-image: url("../img/benefit7.png");
   width: 62px;
   height: 61px;
 }
 .icon-benefit8 {
-  background-image: url("../img/sprite.png");
-  background-position: -201px 0px;
+  background-image: url("../img/benefit8.png");
   width: 51px;
   height: 69px;
 }
 .icon-benefit9 {
-  background-image: url("../img/sprite.png");
-  background-position: -77px 0px;
+  background-image: url("../img/benefit9.png");
   width: 70px;
   height: 56px;
 }
@@ -1349,12 +1364,20 @@ p {
   }
 }
 @media screen and (max-width: 767px) {
+  .benefits__content {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
   .benefits__text {
     text-align: left;
     font-size: 13px;
   }
   .benefits__item {
-    min-height: 85px;
+    min-height: 70px;
+  }
+  .benefits__item div {
+    background-size: 65%;
+    background-position: center;
   }
   .benefits__item-text {
     font-size: 13px;
@@ -1677,14 +1700,8 @@ p {
   }
 }
 @media screen and (max-width: 767px) {
-  .menu__list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .menu__item {
-    margin-bottom: 10px;
+  .menu {
+    display: none;
   }
 }
 .content {
@@ -1975,8 +1992,24 @@ p {
   .content__list {
     width: 100%;
     max-width: 450px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: 180px;
+    min-height: 0;
+    padding-bottom: 37px;
+    padding-left: 6.5%;
+    margin-bottom: 25px;
     margin-left: auto;
     margin-right: auto;
+  }
+  .content__list li {
+    width: 150px;
+  }
+  .disease {
+    width: 149px;
+    font-size: 13px;
+    padding-left: 20px;
+    margin-bottom: 10px;
   }
   .content__description {
     width: 100%;
@@ -2052,7 +2085,7 @@ p {
 .popup {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   left: 0;
   top: 0;
   width: 100%;
@@ -2090,6 +2123,43 @@ p {
   .popup__wrapper .form__submit {
     width: 150px;
   }
+}
+.mobile-menu {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+.mobile-menu__wrapper {
+  position: relative;
+  background-color: #00807C;
+  border: 1px solid #ffffff;
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 40px;
+}
+.mobile-menu__closed {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  font-size: 50px;
+  color: #ffffff;
+  cursor: pointer;
+}
+.mobile-menu__list {
+  text-align: center;
+}
+.mobile-menu__item {
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+.mobile-menu__item:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
