--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,9 @@ p {
     line-height: 1.2;
     width: auto;
   }
+  .subtitle--mobile-white {
+    color: #ffffff;
+  }
 }
 .title {
   font-size: 24px;
@@ -445,6 +448,9 @@ p {
     font-size: 20px;
     line-height: 1.2;
     width: auto;
+  }
+  .title--mobile-white {
+    color: #ffffff;
   }
 }
 .choice {
@@ -821,6 +827,7 @@ p {
     background-size: auto 100%;
     min-height: 203px;
     width: auto;
+    background-image: url("../img/consult-bg-mobile.png");
     border-radius: 0;
   }
   .consult__form {
@@ -829,10 +836,6 @@ p {
   .consult__title {
     margin-top: -5px;
     margin-bottom: 10px;
-    color: #00807C;
-  }
-  .consult__subtitle {
-    color: #00807C;
   }
 }
 .page-nav {
