--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@
 *::before {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  outline: 1px solid red;
+  //outline: 1px solid red;
   outline-offset: -1px;
   background-repeat: no-repeat;
 }
